<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.phoenixnap.oss</groupId>
	<artifactId>springmvc-raml-parent</artifactId>
	<version>0.6.1</version>
	
	<name>Spring MVC to RAML Synchronizer</name>
	<description>Parent pom to the SpringMVC RAML Generation/Verification Project</description>
	<url>https://github.com/phoenixnap/springmvc-raml-plugin/</url>
	<packaging>pom</packaging>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<developers>
		<developer>
			<name>Kurt Paris</name>
			<email>kurtpa@phoenixnap.com</email>
			<organization>PhoenixNAP</organization>
      		<organizationUrl>http://www.phoenixnap.com</organizationUrl>
		</developer>
	</developers>
	
	<licenses>
	  <license>
		<name>The Apache License, Version 2.0</name>
		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
	  </license>
	</licenses>
		
	<modules>
		<module>springmvc-raml-annotations</module>
		<module>springmvc-raml-parser</module>
		<module>springmvc-raml-plugin</module>
	</modules>
	
	<scm>
	  <connection>scm:git:git@github.com:phoenixnap/springmvc-raml-plugin.git</connection>
	  <developerConnection>scm:git:git@github.com:phoenixnap/springmvc-raml-plugin.git</developerConnection>
	  <url>git@github.com:phoenixnap/springmvc-raml-plugin.git</url>
	</scm>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<powermock.version>1.6.2</powermock.version>
		<maven.core.version>3.3.9</maven.core.version>
		<spring.platform.version>2.0.3.RELEASE</spring.platform.version>
		<jsonschema2pojo.version>0.4.23</jsonschema2pojo.version>
		<ramlparser.version>0.8.13</ramlparser.version>
		<reflections.version>0.9.10</reflections.version>
		<javaparser.version>2.4.0</javaparser.version>
	</properties>
  
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<compilerArgument>-parameters</compilerArgument>
					</configuration>
				</plugin>
			</plugins>
			
		</pluginManagement>
	</build>

	<profiles>
			<profile>
				<id>sign</id>
				<build>	
				  <plugins>
					<plugin>
					  <groupId>org.apache.maven.plugins</groupId>
					  <artifactId>maven-gpg-plugin</artifactId>
					  <version>1.6</version>
					  <executions>
						<execution>
						  <id>sign-artifacts</id>
						  <phase>verify</phase>
						  <goals>
							<goal>sign</goal>
						  </goals>
						</execution>
					  </executions>
					</plugin>
				  </plugins>
				</build>
			</profile>
	</profiles>
   
  <dependencyManagement>  
    <dependencies>
		<dependency>
			<groupId>io.spring.platform</groupId>
			<artifactId>platform-bom</artifactId>
			<version>${spring.platform.version}</version>
			<type>pom</type>
			<scope>import</scope>
		</dependency>
		
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>${javaparser.version}</version>
		</dependency>
		<dependency>
			<groupId>org.raml</groupId>
			<artifactId>raml-parser</artifactId>
			<version>${ramlparser.version}</version>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${reflections.version}</version>
		</dependency>				
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jsonSchema</artifactId>
			<version>2.7.3</version>
		</dependency>
		<dependency>
			<groupId>org.jsonschema2pojo</groupId>
			<artifactId>jsonschema2pojo-core</artifactId>
			<version>${jsonschema2pojo.version}</version>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>	
  </dependencyManagement>

	<distributionManagement>
		 <snapshotRepository>
			 <id>ossrh</id>
			 <url>https://oss.sonatype.org/content/repositories/snapshots</url>
		 </snapshotRepository>
		 <repository>
			 <id>ossrh</id>
			 <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		 </repository>
	</distributionManagement>

</project>

